; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_confighash.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_confighash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @confighash(%struct.config* %0) #0 {
  %2 = alloca %struct.config*, align 8
  %3 = alloca i32, align 4
  store %struct.config* %0, %struct.config** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = mul i32 %4, 571
  %6 = load %struct.config*, %struct.config** %2, align 8
  %7 = getelementptr inbounds %struct.config, %struct.config* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %10, 37
  %12 = add i32 %5, %11
  %13 = load %struct.config*, %struct.config** %2, align 8
  %14 = getelementptr inbounds %struct.config, %struct.config* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = add i32 %12, %15
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
